[gd_scene load_steps=9 format=3 uid="uid://ccor7ojcykuxo"]

[ext_resource type="Script" path="res://main_game_screen.gd" id="1_pkvdb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7yxb"]
bg_color = Color(0.533795, 0.588546, 0.801796, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmgg8"]
bg_color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06k42"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_k2sos"]
script/source = "extends ProgressBar
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5uin"]
bg_color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1nb4k"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_be4cf"]
bg_color = Color(0, 1, 0, 1)

[node name="MainGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkvdb")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u7yxb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="OverallContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="VBoxContainer" parent="MarginContainer/OverallContainer"]
layout_mode = 2

[node name="HpLable" type="Label" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "HP"

[node name="HpBar" type="ProgressBar" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxFlat_rmgg8")
theme_override_styles/fill = SubResource("StyleBoxFlat_06k42")
value = 40.0
script = SubResource("GDScript_k2sos")

[node name="MpLable" type="Label" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "MP
"

[node name="MpBar" type="ProgressBar" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxFlat_b5uin")
theme_override_styles/fill = SubResource("StyleBoxFlat_1nb4k")
value = 40.0
script = SubResource("GDScript_k2sos")

[node name="ExpLable" type="Label" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "EXP"

[node name="ExpBar" type="ProgressBar" parent="MarginContainer/OverallContainer/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/background = SubResource("StyleBoxFlat_b5uin")
theme_override_styles/fill = SubResource("StyleBoxFlat_be4cf")
value = 40.0
script = SubResource("GDScript_k2sos")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/OverallContainer"]
custom_minimum_size = Vector2(0, 1500)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/OverallContainer/ScrollContainer"]
layout_mode = 2
text = "bla bla bla
"

[node name="ChoiceContainer" type="VBoxContainer" parent="MarginContainer/OverallContainer"]
layout_mode = 2

[node name="ChoiceButton1" type="Button" parent="MarginContainer/OverallContainer/ChoiceContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ChoiceButton2" type="Button" parent="MarginContainer/OverallContainer/ChoiceContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ChoiceButton3" type="Button" parent="MarginContainer/OverallContainer/ChoiceContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ChoiceButton4" type="Button" parent="MarginContainer/OverallContainer/ChoiceContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/OverallContainer"]
layout_mode = 2

[node name="BackToMenu" type="Button" parent="MarginContainer/OverallContainer/HBoxContainer"]
custom_minimum_size = Vector2(344, 113)
layout_mode = 2
size_flags_horizontal = 0

[node name="Fight" type="Button" parent="MarginContainer/OverallContainer/HBoxContainer"]
custom_minimum_size = Vector2(344, 113)
layout_mode = 2
size_flags_horizontal = 0

[node name="Inventory" type="Button" parent="MarginContainer/OverallContainer/HBoxContainer"]
custom_minimum_size = Vector2(344, 113)
layout_mode = 2
size_flags_horizontal = 0
